# cmake-startup-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
foo/: CMakeLists.txt  main.cpp
foo/startprj/: foo.cpp  foo.hpp
